--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <!-- HEADER -->
+     <!-- HEADER -->
     <header id="main-header">
         <div class="container">
           <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
@@ -17,8 +17,8 @@
             <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
               <nav id="navbar">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li class="current"><a href="about.html">About</a></li>
+                  <li class="current"><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li><a href="services.html">Services</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
